Dark mode image visibility fixed and patient documents page start

--- a/client/src/HomeDrawer.scss
+++ b/client/src/HomeDrawer.scss
@@ -1,7 +1,7 @@
 $green:lightgreen;
 
 .homeDrawer{
-    height: 95vh;
+    height: 94.3vh;
     position: absolute;
     background-color: white;
     border-right: 1px solid $green;
