--- a/client/src/HomeNav.scss
+++ b/client/src/HomeNav.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content:space-between;
     border-bottom: 1px solid lightgreen;
-    box-shadow: 0px 0px 50px 5px rgb(77, 226, 77);
+    box-shadow: 0px 0px 15px rgb(77, 226, 77);
     h1{
         margin-left: 1.4em;       
     }
@@ -52,20 +52,28 @@
     }
 
     &__icon{
-        width: 1rem;
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50%;
+        border: 1px solid blue;
+    }
+    .iconDark{
+        mix-blend-mode: exclusion;
     }
 
     .darkMode{
-        position: absolute;
+        position: fixed;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         z-index: 101;
-        background-color: white;
-        mix-blend-mode:difference;
         pointer-events: none;
-        display: none;
+        background-color: black;
+        mix-blend-mode: difference;
+        display: block;
 
         &.active{
+            background-color: white;
+            mix-blend-mode:difference;
             display: block;
         }
     }
