--- a/client/src/PersonalDetail.scss
+++ b/client/src/PersonalDetail.scss
@@ -65,7 +65,12 @@
             justify-content: space-between;
             padding: 0 1em;
         }
-
+        .image{
+            position: relative;
+        }
+        .imageDark{
+            mix-blend-mode: exclusion;
+        }
         label{
             display: grid;
             margin: 2em 1em 1em 0em;
@@ -123,8 +128,11 @@
     }
 
     button[type="submit"] {
-        width: 80%;
-        margin: 1em 0;
+        width: 50%;
+        margin: 1em auto;
+        height: 3em;
+        border: none;
+        box-shadow: 0px 0px 15px lightgreen;
     }
 
     &__emergency {
